--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,4 +6,12 @@
     <p>{{post.author}}</p>
     <p>{{post.content}}</p>
 
+    <button type="button">
+        <a href="{% url 'post-update' post.pk %}">Update view</a>
+    </button> 
+
+    <button type="button">
+        <a href="{% url 'post-delete' post.pk %}">Delete view</a>
+    </button> 
+    
 {% endblock content %}
